# aitor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  aitor_example.py  example.py  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md  llm.md  memory.md  tools.md
docs/api/: README.md  agents.md
docs/examples/: README.md  basic-workflow.md
examples/: chat_tools.py  example_tools.py  planning_demo.py  react_demo.py  sales_chat_agent.py  sales_planning_agent.py
src/aitor/: __init__.py  aitor.py  aitorflows.py  llm.py  logging_config.py  memory.py  planning_agent.py  planning_reasoning.py  react_agent.py  reasoning.py  sub_agent.py  task.py  todo.py  tools.py
src/tools/: __init__.py  slack_tools.py  web_search_tools.py
