[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitor"
version = "0.1.0"
description = "A lightweight AI workflow builder"
authors = [{name = "Ashfakh", email = "ashfakhrithu@gmail.com"}]
readme = "README.md"
requires-python = ">=3.7" 